--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -108,7 +108,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 1.168.160.120;
+deny 114.41.23.45;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -153,6 +153,7 @@ deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.41.95.1;
 deny 154.41.95.2;
+deny 154.83.88.219;
 deny 158.69.252.116;
 deny 160.119.249.240;
 deny 161.129.68.162;
@@ -296,6 +297,14 @@ deny 185.220.100.240;
 deny 185.220.100.241;
 deny 185.220.100.242;
 deny 185.220.100.243;
+deny 185.220.100.244;
+deny 185.220.100.245;
+deny 185.220.100.246;
+deny 185.220.100.247;
+deny 185.220.100.248;
+deny 185.220.100.249;
+deny 185.220.100.250;
+deny 185.220.100.251;
 deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
@@ -1323,7 +1332,10 @@ deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:64c0:f802:1::a;
 deny 2a0b:64c0:f802:4c::a;
+deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
@@ -1331,6 +1343,11 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1550,9 +1567,11 @@ deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc0:0:8::a84e;
 deny 2a0e:bfc2:0:24::3456;
+deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
+deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
@@ -1641,13 +1660,13 @@ deny 2a12:a800:9:1:193:26:115:161;
 deny 2a12:a800:9:1:193:26:115:212;
 deny 2a12:a800:9:1:193:26:115:43;
 deny 2a12:a800:9:1:193:26:115:61;
+deny 2a14:3f87:6920::126;
 deny 2a14:3f87:6920::5b;
 deny 2a14:3f87:f001:30::a;
 deny 2c0f:6c0:0:4::95ea;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1658,6 +1677,7 @@ deny 37.228.129.63;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1766,11 +1786,13 @@ deny 45.90.185.116;
 deny 45.90.185.117;
 deny 45.90.185.118;
 deny 45.90.185.119;
+deny 45.90.185.67;
 deny 45.90.185.68;
 deny 45.9.156.100;
 deny 45.9.156.101;
 deny 45.9.168.103;
 deny 45.9.168.108;
+deny 45.9.168.18;
 deny 45.94.31.68;
 deny 45.95.169.104;
 deny 45.95.169.109;
