--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -88,6 +88,7 @@ allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
 allow 108.181.120.130;
+allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
@@ -137,7 +138,6 @@ allow 144.172.118.41;
 allow 144.172.118.73;
 allow 146.59.126.232;
 allow 146.59.231.4;
-allow 147.45.116.145;
 allow 148.113.152.91;
 allow 149.202.79.129;
 allow 149.56.22.133;
@@ -157,6 +157,7 @@ allow 161.129.68.162;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -1016,6 +1017,7 @@ allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:b480:3:6::2;
