--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -200,6 +200,7 @@ allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -229,7 +230,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 179.35.0.48;
+allow 179.35.4.30;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -309,6 +310,10 @@ allow 185.220.100.248;
 allow 185.220.100.249;
 allow 185.220.100.250;
 allow 185.220.100.251;
+allow 185.220.100.252;
+allow 185.220.100.253;
+allow 185.220.100.254;
+allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
@@ -1289,7 +1294,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1338,13 +1342,18 @@ allow 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
+allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
 allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
 allow 2a0b:f4c0:16c:16::1;
+allow 2a0b:f4c0:16c:2::1;
+allow 2a0b:f4c0:16c:3::1;
+allow 2a0b:f4c0:16c:4::1;
 allow 2a0b:f4c0:16c:5::1;
 allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
@@ -1761,6 +1770,7 @@ allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.80.158.36;
 allow 45.80.158.69;
+allow 45.80.158.97;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.84.107.101;
@@ -1831,7 +1841,6 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
