--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -407,7 +407,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -456,13 +455,18 @@ deny 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:64c0:f802:1::a;
 deny 2a0b:64c0:f802:4c::a;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
+deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
 deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
 deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
 deny 2a0b:f4c0:16c:5::1;
 deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
